# rpi-tcp-device-control

./: .gitignore  .last_deploy_hash  CMakeLists.txt  README.md  all_build.sh  analysis_results.md  build_all.sh  build_script.sh  client_build.sh  deploy.sh  server_build.sh  toolchain_arm64.cmake  walkthrough.md
.agents/rules/: code-guide.md
.io_test/: buzzer.c  i2c_cds.c  pwm.c  segment_test.c  software_pwm.c  yl-40_test.c
client/: CMakeLists.txt  main.c
docs/: 2026_VEDA07_심화실습평가2(리눅스프로그래밍).md  development_document.md
include/: common.h  io_control.h  server_socket.h
lib/: CMakeLists.txt  io_control.c  server.c  server_socket.c  yl40.c
server/: CMakeLists.txt  ai_gen.c  common.h  main.c  server.c  yl40.c
